--- a/Aula04/Layout, multimidia/Exercicio 1.html
+++ b/Aula04/Layout, multimidia/Exercicio 1.html
@@ -11,8 +11,9 @@
         <h1>NOME DO SITE </h1>
         <nav>
             <a href ="file:///C:/Users/giova/OneDrive/%C3%81rea%20de%20Trabalho/AW1/Aula04/Layout%2C%20multimidia/Exercicio%201.html">Menu</a> 
-            <a href ="">Exercicio 1</a> 
-            <a href ="">Exercicio 2</a> 
+            <a href ="https://github.com/Giovana-Soares/Exercicios-AW1/edit/main/Aula04/Layout,%20multimidia/Exercicio%201.html">Exercicio 1</a> 
+            <a href ="https://github.com/Giovana-Soares/Exercicios-AW1/blob/main/Aula04/Layout%2C%20multimidia/Exercicio3_ParteA.html">Exercicio 3 parte A</a> 
+            <a href ="https://github.com/Giovana-Soares/Exercicios-AW1/blob/main/Aula04/Layout%2C%20multimidia/Exercicio3_ParteB.html">Exercicio 3 parte B</a> 
         </nav>
 
         <center> <article>
